<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_Browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/browse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_url"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Browse"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/https_www_google_com"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="url"
        android:hint="@string/enter_url"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Browse"
        app:layout_constraintEnd_toStartOf="@+id/btn_Browse"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Button
        android:id="@+id/btn_Call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Browse" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Call"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_9999999999"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:hint="@string/enter_phone_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Call"
        app:layout_constraintEnd_toStartOf="@+id/btn_Call"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_Calllog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/call_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Call" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_log1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Calllog"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Calllog" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Gallery"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Gallery" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Camera"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Camera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Alarm"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Alarm" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Login"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>